# FragStatsPy

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: metrics_list.txt  simple_example.md
samples/simple_example/: classes.tif  classes_id8.tif  polygons.dbf  polygons.shp  polygons.shx  simple_example.py  simple_model.fca  user_tiles.dbf  user_tiles.shp  user_tiles.shx  user_tiles.tif
src/: frag_model.py
src/FragStatsPy/: __init__.py  frag_model.py  model_template.db
